# fpl-modern-parser

./: .gitignore  CMakeLists.txt  README.md  import.fpl  main.cpp  main.fpl
src/Essentials/: Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
src/Essentials/Definitions/: Fonction.cpp  Fonction.h  Variables.cpp  Variables.h
src/Essentials/Utils/: Data.cpp  Data.h  ErrorsCodeManagement.cpp  ErrorsCodeManagement.h  Expecter.cpp  Expecter.h
src/Instructions/: Inputs.cpp  Inputs.h  Print.cpp  Print.h  Prints.cpp  Prints.h
